#18 - fix tabs on logged-out pages; make core html for  multi button (more tweaks requred though)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,8 @@
 $color-brand: #f8a41b;
 $color-brand-fade: #f0642a;
 $color-inv: #ffffff;
+$color-info: #0092ce;
+$color-success: #167f3a;
 
 @import "*";
 
