--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div id="kmLoginPage">
 
   <div class="container-fluid">
-    <div class="row">
+    <div class="row content-tabs">
       <ul class="nav nav-tabs nav-justified">
         <li role="presentation"><%= link_to 'login', new_user_session_path %></li>
         <li role="presentation" class="active"><a data-toggle="tab" href="#register_form">Register</a></li>
