--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -15,7 +15,7 @@
           <% end %>
         </li>
         <li role="presentation">
-          <%= link_to '#activities', data: {toggle: 'tab'} do%>
+          <%= link_to activities_path do%>
             Activities
           <% end %>
         </li>
