#18 - finish with multi-buttons; add a small plugin for dropdown select;

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,10 +16,13 @@
 @import "font-awesome";
 
 $color-brand: #f8a41b;
+$color-brand-em: #ea9b1a;
 $color-brand-fade: #f0642a;
 $color-inv: #ffffff;
 $color-info: #0092ce;
+$color-info-em: #0087be;
 $color-success: #167f3a;
+$color-success-em: #147134;
 
 @import "*";
 
