--- a/app/views/home/activities.html.erb
+++ b/app/views/home/activities.html.erb
@@ -106,7 +106,9 @@
       </thead>
       <tbody>
       <tr class="text-center v-middle">
-        <td class="text-left">Kidergarten<br>Categories: Classroom 1</td>
+        <td class="text-left">
+          <span class="text-main font-large">Kidergarten<br>Categories: Classroom 1</span>
+        </td>
 
         <td>
           <div class="btn-multi center-block">
@@ -236,7 +238,9 @@
       <% students = ['Danielle Way', 'Laura Ellsworth', 'Mary Sabatini', 'Gloria Lee', 'Jim Chevalier'] %>
       <% students.each do |student| %>
         <tr class="text-center v-middle">
-          <td class="text-left"><%= student %></td>
+          <td class="text-left">
+            <span class="text-main font-large"><%= student %></span>
+          </td>
 
           <td>
             <div class="btn-multi center-block">
