--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -1,3 +1,178 @@
+<div class="container-fluid kmSection">
+  <div class="row content-tabs">
+    <div class="container">
+      <ul class="nav nav-tabs nav-justified">
+        <li role="presentation">
+          <%= link_to dashboard_path do%>
+            Dashboard
+            <span class="caret"></span>
+          <% end %>
+        </li>
+        <li role="presentation" class="active">
+          <%= link_to '#classroom', data: {toggle: 'tab'} do%>
+            Classroom
+            <span class="caret"></span>
+          <% end %>
+        </li>
+        <li role="presentation">
+          <%= link_to '#activities', data: {toggle: 'tab'} do%>
+            Activities
+          <% end %>
+        </li>
+        <li role="presentation">
+          <%= link_to '#teacher_mode', data: {toggle: 'tab'} do%>
+            Teacher Mode
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid kmSection">
+  <div class="row kmSectionTitle">
+    <div class="container">
+      <div class="pull-left">
+        <h4>Activities</h4>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container kmSection">
+  <div class="row">
+    <table class="table inline solid fit">
+      <tbody>
+      <tr class="col-pad">
+        <td>
+          <h4>Choose Categories:</h4>
+        </td>
+        <td>
+          <h4>Choose Classroom:</h4>
+        </td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>
+          <div class="dropdown simple medium select">
+            <a href="javascript:" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              <span class="value">Kindergarten</span>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-right">
+              <li class="hidden"><a href="javascript:">Kindergarten</a></li>
+              <li><a href="javascript:">Grade 1</a></li>
+            </ul>
+            <input type="hidden" value="Kindergarten">
+          </div>
+        </td>
+        <td>
+          <div class="dropdown simple medium select">
+            <a href="javascript:" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              <span class="value">Classroom 1</span>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-right">
+              <li class="hidden"><a href="javascript:">Classroom 1</a></li>
+              <li><a href="javascript:">Classroom 2</a></li>
+              <li><a href="javascript:">Classroom 3</a></li>
+            </ul>
+            <input type="hidden" value="Classroom 1">
+          </div>
+        </td>
+        <td>
+          <%= link_to 'Set', 'javascript:;', class: 'btn btn-warning btn-simple' %>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="container kmSection">
+  <div class="row">
+    <h4>Current Classroom:</h4>
+    <table class="table fit">
+      <thead>
+      <tr>
+        <th class="text-center">Classroom</th>
+        <th class="text-center">Total Students</th>
+        <th class="text-center"></th>
+        <th class="text-center minimal">Add Student</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr class="text-center v-middle">
+        <td class="text-left minimal">
+          <span class="text-main font-large">Kidergarten<br>Categories: Classroom 1</span>
+        </td>
+
+        <td class="equal">
+          <span class="text-main font-large">8</span>
+        </td>
+
+        <td class="equal"></td>
+
+        <td>
+          <%= link_to 'javascript:', class: 'btn btn-info btn-simple btn-large btn-wide' do %>
+            <i class="fa fa-plus"></i>
+            <span>Add New Student</span>
+          <% end %>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+
+
+    <table class="table fit">
+      <thead>
+      <tr class="no-border-top">
+        <th class="text-center">Avatar</th>
+        <th class="text-center">Students</th>
+        <th class="text-center">Download Report</th>
+        <th class="text-center">Download Report</th>
+        <th colspan="2"></th>
+      </tr>
+      </thead>
+      <tbody>
+      <% students = ['Danielle Way', 'Laura Ellsworth', 'Mary Sabatini', 'Gloria Lee', 'Jim Chevalier'] %>
+      <% students.each do |student| %>
+        <tr class="text-center v-middle">
+          <td class="minimal">
+            <%= link_to 'javascript:' do %>
+              <%= image_tag 'student_avatar.jpg' %>
+            <% end %>
+          </td>
+
+          <td>
+            <span class="text-main font-large"><%= student %></span>
+          </td>
+
+          <td>
+            <%= link_to 'Kindergarten Report', 'javascript:', class: 'btn btn-info btn-simple btn-wide' %>
+          </td>
+
+          <td>
+            <%= link_to 'Full Report', 'javascript:', class: 'btn btn-info btn-simple btn-wide' %>
+          </td>
+
+          <td class="minimal">
+            <%= link_to 'Edit', 'javascript:', class: 'btn btn-warning btn-simple btn-extended' %>
+          </td>
+
+          <td class="minimal">
+            <%= link_to 'Delete', 'javascript:', class: 'btn btn-danger btn-simple btn-extended' %>
+          </td>
+
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+
+  </div>
+</div>
+
+<!-- leave this code just in case
 <h1>Classrooms</h1>
 
 <table>
@@ -30,3 +205,4 @@
 
 <%= link_to 'New Classroom', new_classroom_path %>
 <%= link_to 'Back', root_path %>
+-->
