--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -41,51 +41,54 @@
 
 <div class="container kmSection">
   <div class="row">
-    <table class="table inline solid fit">
-      <tbody>
-      <tr class="col-pad">
-        <td>
-          <h4>Choose Categories:</h4>
-        </td>
-        <td>
-          <h4>Choose Classroom:</h4>
-        </td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>
-          <div class="dropdown simple medium select">
-            <a href="javascript:" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              <span class="value">Kindergarten</span>
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-right">
-              <li class="hidden"><a href="javascript:">Kindergarten</a></li>
-              <li><a href="javascript:">Grade 1</a></li>
-            </ul>
-            <input type="hidden" value="Kindergarten">
-          </div>
-        </td>
-        <td>
-          <div class="dropdown simple medium select">
-            <a href="javascript:" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              <span class="value">Classroom 1</span>
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-right">
-              <li class="hidden"><a href="javascript:">Classroom 1</a></li>
-              <li><a href="javascript:">Classroom 2</a></li>
-              <li><a href="javascript:">Classroom 3</a></li>
-            </ul>
-            <input type="hidden" value="Classroom 1">
-          </div>
-        </td>
-        <td>
-          <%= link_to 'Set', 'javascript:;', class: 'btn btn-warning btn-simple' %>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+    <%= form_tag classrooms_path, method: :get do %>
+      <table class="table inline solid fit">
+        <tbody>
+        <tr class="col-pad">
+          <td>
+            <h4>Choose Classroom Type:</h4>
+          </td>
+          <td>
+            <h4>Choose Classroom:</h4>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>
+            <div class="dropdown simple medium select classroomType">
+              <a href="javascript:" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <span class="value"><%= @current_classroom_type.type_name %></span>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-right">
+                <% @classroom_types.each do |ct| %>
+                  <li><a href="javascript:" data-id="<%= ct.id %>"><%= ct.type_name %></a></li>
+                <% end %>
+              </ul>
+              <%= hidden_field_tag :classroom_type, @current_classroom_type.id %>
+            </div>
+          </td>
+          <td>
+            <div class="dropdown simple medium select classroom">
+              <a href="javascript:" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <span class="value"><%= @current_classroom.name %></span>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-right">
+                <% @classroom_hash[@current_classroom_type.id].each do |cr| %>
+                  <li><a href="javascript:" data-id="<%= cr[0] %>"><%= cr[1] %></a></li>
+                <% end %>
+              </ul>
+              <%= hidden_field_tag :classroom, @current_classroom.id %>
+            </div>
+          </td>
+          <td>
+            <%= submit_tag 'Set', class: 'btn btn-warning btn-simple' %>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    <% end %>
   </div>
 </div>
 
@@ -104,17 +107,17 @@
       <tbody>
       <tr class="text-center v-middle">
         <td class="text-left minimal">
-          <span class="text-main font-large">Kidergarten<br>Categories: Classroom 1</span>
+          <span class="text-main font-large"><%= @current_classroom_type.type_name %><br><%= @current_classroom.name %></span>
         </td>
 
         <td class="equal">
-          <span class="text-main font-large">8</span>
+          <span class="text-main font-large"><%= @current_classroom.kids.count %></span>
         </td>
 
         <td class="equal"></td>
 
         <td>
-          <%= link_to 'javascript:', class: 'btn btn-info btn-simple btn-large btn-wide' do %>
+          <%= link_to new_kid_path, class: 'btn btn-info btn-simple btn-large btn-wide' do %>
             <i class="fa fa-plus"></i>
             <span>Add New Student</span>
           <% end %>
@@ -130,38 +133,45 @@
         <th class="text-center">Avatar</th>
         <th class="text-center">Students</th>
         <th class="text-center">Download Report</th>
-        <th class="text-center">Download Report</th>
+        <% if @current_classroom.kindergarten? %>
+          <th class="text-center">Download Report</th>
+        <% end %>
         <th colspan="2"></th>
       </tr>
       </thead>
       <tbody>
-      <% students = ['Danielle Way', 'Laura Ellsworth', 'Mary Sabatini', 'Gloria Lee', 'Jim Chevalier'] %>
-      <% students.each do |student| %>
+      <% @current_classroom.kids.each do |kid| %>
         <tr class="text-center v-middle">
           <td class="minimal">
-            <%= link_to 'javascript:' do %>
-              <%= image_tag 'student_avatar.jpg' %>
+            <%= link_to kid do %>
+              <% avatar = kid.male? ? 'boy_avatar.png' : 'girl_avatar.jpg' %>
+              <%= image_tag avatar %>
             <% end %>
           </td>
 
           <td>
-            <span class="text-main font-large"><%= student %></span>
+            <span class="text-main font-large"><%= kid.full_name %></span>
           </td>
+          <% if kid.kindergarten? %>
+            <td>
+              <%= link_to 'Kindergarten Report', 'javascript:', class: 'btn btn-info btn-simple btn-wide' %>
+            </td>
 
-          <td>
-            <%= link_to 'Kindergarten Report', 'javascript:', class: 'btn btn-info btn-simple btn-wide' %>
-          </td>
+            <td>
+              <%= link_to 'Full Report', reports_kid_path(kid), class: 'btn btn-info btn-simple btn-wide' %>
+            </td>
+          <% else %>
+            <td>
+              <%= link_to 'First Grade Report', reports_kid_path(kid), class: 'btn btn-info btn-simple btn-wide' %>
+            </td>
+          <% end %>
 
-          <td>
-            <%= link_to 'Full Report', 'javascript:', class: 'btn btn-info btn-simple btn-wide' %>
+          <td class="minimal">
+            <%= link_to 'Edit', edit_kid_path(kid), class: 'btn btn-warning btn-simple btn-extended' %>
           </td>
 
           <td class="minimal">
-            <%= link_to 'Edit', 'javascript:', class: 'btn btn-warning btn-simple btn-extended' %>
-          </td>
-
-          <td class="minimal">
-            <%= link_to 'Delete', 'javascript:', class: 'btn btn-danger btn-simple btn-extended' %>
+            <%= link_to 'Delete', kid, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-simple btn-extended' %>
           </td>
 
         </tr>
@@ -171,6 +181,23 @@
 
   </div>
 </div>
+
+<script>
+  $(document).ready(function(){
+    var classroom_hash = <%= @classroom_hash.to_json.html_safe %>;
+    $('.dropdown.select.classroomType ul > li > a').click(function(){
+      var id = $(this).data('id');
+      var classrooms = classroom_hash[id];
+      $('.dropdown.select.classroom ul').html('');
+      if(classrooms.length)
+        $('.dropdown.select.classroom span.value').text(classrooms[0][1]);
+        $('.dropdown.select.classroom input[type="hidden"]').val(classrooms[0][0]);
+      classrooms.forEach(function(el){
+        $('.dropdown.select.classroom ul').append('<li><a href="javascript:" data-id="' + el[0] + '">' + el[1] + '</a></li>');
+      });
+    });
+  });
+</script>
 
 <!-- leave this code just in case
 <h1>Classrooms</h1>
