--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -20,6 +20,7 @@
       &:last-child {margin-bottom:30px; padding-left:70px;}
     }
     .media {margin:20px 0; overflow:visible;
+      .media-body {overflow:visible;}
       .img-circle {border:solid 4px #d2dbe4;}
     }
   }
