--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -167,6 +167,10 @@
 
       <div class="tab-content">
         <div class="tab-pane active" id="kg_count_card_20" role="tabpanel">
+          <%= render 'bar_chart', values: [15, 40, 10, 80], rows_count: 10 %>
+        </div>
+
+        <div class="tab-pane" id="kg_base_10" role="tabpanel">
           <div class="row">
             <div class="col-md-6">
               <%= render 'bar_chart', title: 'Count', values: [75, 25], rows_count: 10 %>
@@ -175,11 +179,6 @@
               <%= render 'bar_chart', title: 'Produce', values: [33, 66], rows_count: 10 %>
             </div>
           </div>
-        </div>
-
-        <div class="tab-pane" id="kg_base_10" role="tabpanel">
-          <%= render 'bar_chart', title: 'Count', values: [15, 40, 10, 80], rows_count: 10 %>
-          <%= render 'bar_chart', title: 'Produce', values: [20, 10, 15, 55], rows_count: 10 %>
         </div>
 
         <div class="tab-pane" id="kg_number_line_model" role="tabpanel">
@@ -209,6 +208,10 @@
 
       <div class="tab-content">
         <div class="tab-pane active" id="g1_count_card_20" role="tabpanel">
+          <%= render 'bar_chart', values: [20, 10, 15, 55] %>
+        </div>
+
+        <div class="tab-pane" id="g1_base_10" role="tabpanel">
           <div class="row">
             <div class="col-md-6">
               <%= render 'bar_chart', title: 'Count', values: [25, 75] %>
@@ -217,11 +220,6 @@
               <%= render 'bar_chart', title: 'Produce', values: [33, 66] %>
             </div>
           </div>
-        </div>
-
-        <div class="tab-pane" id="g1_base_10" role="tabpanel">
-          <%= render 'bar_chart', title: 'Count', values: [15, 40, 10, 80] %>
-          <%= render 'bar_chart', title: 'Produce', values: [20, 10, 15, 55] %>
         </div>
 
         <div class="tab-pane" id="g1_number_line_model" role="tabpanel">
