#23 :: Teachers should have ability to choose school with their classroom

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,3 +39,5 @@ a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
 .font-xlarge {font-size:18px;}
 .font-xxlarge {font-size:22px;}
 .text-main {color:$color-main;}
+
+.centered{text-align:center;}
