--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -190,8 +190,14 @@
       var classrooms = classroom_hash[id];
       $('.dropdown.select.classroom ul').html('');
       if(classrooms.length)
+      {
         $('.dropdown.select.classroom span.value').text(classrooms[0][1]);
         $('.dropdown.select.classroom input[type="hidden"]').val(classrooms[0][0]);
+      }
+      else
+      {
+        $('.dropdown.select.classroom span.value').text('');
+      }
       classrooms.forEach(function(el){
         $('.dropdown.select.classroom ul').append('<li><a href="javascript:" data-id="' + el[0] + '">' + el[1] + '</a></li>');
       });
